# aeronav-pico

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: generator-generic-ossf-slsa3-publish.yml  release.yml  rust.yml
aeronav-cli/: Cargo.toml
aeronav-cli/src/: cli_display_target.rs  cli_key_source.rs  main.rs
aeronav-core/: Cargo.toml
aeronav-core/src/: app.rs  display_target.rs  error.rs  input.rs  key_source.rs  layout.rs  lib.rs  picocalc_display_target.rs  picocalc_key_source.rs  renderer.rs  runtime.rs  viewer.rs
aeronav-core/src/app/: command.rs  mod.rs  runner.rs  screen.rs  state.rs
aeronav-core/src/input/: keys.rs  mod.rs  picocalc.rs  source.rs
aeronav-core/src/ui/: frame.rs  mod.rs  pager.rs  renderer.rs  text.rs  viewer.rs
aeronav-core/src/weather/: mod.rs  model.rs  service.rs
