[package]
name = "aeronav-cli"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for AeroNav Pico, a paginated METAR/TAF viewer designed for desktop use and future Picocalc integration."
readme = "../README.md"
keywords = ["metar", "taf", "aviation", "cli", "weather"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
aeronav-core = { version = "0.6.0", path = "../aeronav-core" }
metar-taf-parser = "0.4.9"